# flingd-cc

./: .gitignore  CMakeLists.txt  README.md
daemon/: CMakeLists.txt
daemon/src/: main.cpp
doc/: README.md
flint/: CMakeLists.txt
flint/jni/flint-jni/: project.properties
flint/src/: Flint.cpp  FlintDaemon.cpp  FlintDaemon.h
flint/src/core/: Looper.cpp  Looper.h
flint/src/discovery/: FlintDiscovery.cpp  FlintDiscovery.h
flint/src/discovery/mdns/: Buffer.cpp  Buffer.hpp  Composer.cpp  Composer.h  MDNS.cpp  MDNS.h  MDNSDef.h  MDNSServer.cpp  MDNSServer.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
flint/src/discovery/ssdp/: SSDPServer.cpp  SSDPServer.h
flint/src/handler/: HttpHandler.cpp  HttpHandler.h  WebsocketHandler.cpp  WebsocketHandler.h
flint/src/http/: HTTPServer.cpp  HTTPServer.h  UrlParser.cpp  UrlParser.h
flint/src/peer/: PeerServer.cpp  PeerServer.h
flint/src/platform/: Platform.cpp  Platform.h  PlatformAndroid.cpp  PlatformAndroid.h  PlatformDarwin.cpp  PlatformDarwin.h  PlatformFfos.cpp  PlatformFfos.h  PlatformLinux.cpp  PlatformLinux.h  PlatformPal.cpp  PlatformPal.h  PlatformUnix.cpp  PlatformUnix.h
flint/src/ws/: WebsocketServer.cpp  WebsocketServer.h  WsServer.cpp  WsServer.h
sdk/: CMakeLists.txt
sdk/receiver/: main.cpp
sdk/receiver/src/: FlintReceiverManager.cpp  FlintReceiverManager.h  IpcMessageChannel.cpp  IpcMessageChannel.h  MessageBusManager.cpp  MessageBusManager.h  ReceiverMessageBus.cpp  ReceiverMessageBus.h  ReceiverMessageChannel.cpp  ReceiverMessageChannel.h
sdk/receiver/src/media/: IMediaPlayer.h  MediaInfo.cpp  MediaInfo.h  MediaManager.cpp  MediaManager.h  MediaPlayer.cpp  MediaPlayer.h
sdk/receiver/src/message/: MessageBus.cpp  MessageBus.h  MessageChannel.cpp  MessageChannel.h
sdk/receiver/src/utils/: Logging.cpp  Logging.h
test/flint/: desc.js  dial.js  ipc_launch.js  ipc_launch_hb.js  native_launch.js  native_stop.js  platform_pal.js  simple_get.js  simple_join.js  simple_launch.js  simple_relaunch.js  sys_control.js  tcp_server.js
test/peer/: peer_http.js
test/websocket/: ReceiverChannel.js  SenderChannel.js
